style imput search. add toLowerCase() to searchTerm

--- a/css/styles.css
+++ b/css/styles.css
@@ -69,6 +69,10 @@ button {
 /**========================*/
 
 .nav-bar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
   background-color: navy;
   padding: 0 30px;
 }
@@ -82,6 +86,25 @@ button {
   font-size: 22px;
   color: #fff;
   letter-spacing: 0.04em;
+}
+
+.search-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 40px;
+}
+
+.btn-search {
+  font-size: 18px;
+  color: #fff;
+  letter-spacing: 0.04em;
+  border: 1px solid #fff;
+  padding: 4px 14px;
+}
+#search-input {
+  width: 240px;
+  height: 26px;
 }
 
 /**========================*/
